--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,21 @@
 {% extends 'base.html' %}
 {% block content%}
-<h1>HER MILKSHAKE BRINGS ALL THE BOYS TO THE YARD</h1>
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
+<!-- Content block -->
+<section>
+    <h2>Blog</h2>
+    <div class="star star1"></div>
+    <div class="star star2"></div>
+    <div class="star star3"></div>
+    <div class="star star4"></div>
+    <div class="star star5"></div>
+    <div class="star star6"></div>
+    <div class="star star7"></div>
+    <div class="star star8"></div>
+</section>
+
 {%endblock%}
