--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap');
-*
+body
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Josefin Slab', serif;
+    font-family:'Gloria Hallelujah', cursive;
 }
 section
 {
@@ -23,6 +22,7 @@ section h2{
     font-size: 14em;
     -webkit-text-stroke: 2px #fff;
     text-transform: uppercase;
+    
 }
 section .star {
     position: absolute;
