--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block content%}
-{% block styles%}
-    {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% block content %}
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
 
 <!-- Content block -->
@@ -17,5 +17,5 @@
     <div class="star star7"></div>
     <div class="star star8"></div>
 </section>
-
-{%endblock%}
+<p>I LOVE OPPAI SENPAI and i want yours </p>
+{% endblock %}
