--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,5 +1,9 @@
 {% extends 'base.html'%}
 {% block content %}
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
     <div class="container" style="background-color: white">
         <div class="content-section">
             <form method="POST" action="">
