--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,9 +1,10 @@
-body
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap');
+*
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Gloria Hallelujah', cursive;
+    font-family: 'Josefin Slab', serif;
 }
 section
 {
@@ -24,6 +25,8 @@ section h2{
     text-transform: uppercase;
     
 }
+
+
 section .star {
     position: absolute;
     top: 0;
@@ -92,4 +95,39 @@ section .star.star8{
 }
 .navbar:hover{
     background-position-x: 100%;
+}
+.button {
+    position: relative;
+    background-color: #a18cd1;
+    border: none;
+    font-size: 28px;
+    color: #FFFFFF;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+    cursor: pointer;
+}
+  
+.button:after {
+    content: "";
+    background: #fbc2eb;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px!important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+  
+.button:active:after {
+    padding: 0;
+    margin: 0;
+    opacity: 1;
+    transition: 0s
 }
