--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro %}
+{% from 'macros.html' import displayBlogs as db%}
 {% block content %}
 {% block styles %}
 {{ super() }}
@@ -17,5 +19,28 @@
     <div class="star star7"></div>
     <div class="star star8"></div>
 </section>
-<p>I LOVE OPPAI SENPAI and i want yours </p>
+<br>
+<br>
+<div class="container">
+    <div class="panel">
+        <div class="panel-body">
+            <h5 class="card-title">{{quote.author}}</h5>
+            <p class="card-text">{{quote.quote}}</p>
+            <a href="{{quote.permalink}}"></a>
+        </div>
+    </div>
+</div>
+<div class="container-fluid text-center">
+    <div>
+        <a href="{{url_for('main.new_blog')}}" class="button">Write Blog</a>
+    </div>
+        
+</div>
+<br>
+<br>
+<div class="jumbotron">
+    <div class="row">
+        {{db(blogs)}}
+    </div>
+</div>
 {% endblock %}
